maven wrapper provided (#377)
* readme update.

* maven wrapper provided

* streamx.sh provided more operations